<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trung_pc.demoandroid.LoginActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:id="@+id/imgAvatar"
        android:layout_width="200dp"
        android:layout_height="100dp" />
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="right"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/idlogin"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtUser"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="130dp"
            android:gravity="right"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/passlogin"

            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edtPasswork"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:padding="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
